implement preview command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "devto-cli"
-version = "0.2.1"
+version = "0.3.0"
 edition = "2021"
 authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
 description = "A CLI tool to manage dev.to articles"
@@ -15,6 +15,7 @@ anyhow = "1.0"
 clap = { version = "3.1", features = ["derive", "env"] }
 convert_case = "0.5"
 dialoguer = "0.10"
+frontmatter = "0.4"
 http = "0.2"
 inflections = "1.1"
 serde = { version = "1.0", features = ["derive"] }
